--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.ico" type="image/svg+xml">
     <title>Сложно сосредоточиться</title>
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <span class="header__rec" aria-hidden="true">REC</span>
+      <span class="header__rec" aria-hidden="true">rec</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -45,26 +46,26 @@
         </ul>
       </nav>
       <h1 class="title">no focus</h1>
-      <h2 class="subtitle title-decor">
+      <p class="subtitle title-decor">
         Что делать, когда не можешь делать ничего <br />Или почему нам так
         сложно сконцентрироваться, особенно когда очень надо
-      </h2>
+      </p>
     </header>
     <main class="content">
       <section class="content__section content__section-focus">
-        <h3 class="content__section-heading">
+        <h2 class="content__section-heading">
           Почему сосредоточиться так сложно
-        </h3>
+        </h2>
         <article class="content__section-article">
-          <h4 class="content__section-subheading title-decor">
+          <h3 class="content__section-subheading title-decor">
             Многозадачность
-          </h4>
+          </h3>
           <p class="content__section-text">
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a class="accent-text" href="#0">выяснили</a>, что мозгу тяжело
+            <a class="accent-text" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело
             концентрироваться даже на двух делах одновременно. А когда в поле
             внимания попадает несколько важных задач, организм паникует и
             выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
@@ -72,7 +73,7 @@
           </p>
         </article>
         <article class="content__section-article">
-          <h4 class="content__section-subheading title-decor">Дофамин</h4>
+          <h3 class="content__section-subheading title-decor">Дофамин</h3>
           <p class="content__section-text">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
             невозможности сосредоточиться замешана и полная противоположность
@@ -86,13 +87,13 @@
         </article>
       </section>
       <section class="content__section content__section-concentrate">
-        <h3 class="content__section-heading">
+        <h2 class="content__section-heading">
           Что снижает концентрацию внимания?
-        </h3>
+        </h2>
         <article class="content__section-article">
-          <h4 class="content__section-subheading title-decor">
+          <h3 class="content__section-subheading title-decor">
             Многозадачность
-          </h4>
+          </h3>
           <p class="content__section-text">
             Как концентрация может снижаться из-за… концентрации? Любая
             стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
@@ -114,7 +115,7 @@
           </p>
         </article>
         <article class="content__section-article">
-          <h4 class="content__section-subheading title-decor">Гаджеты</h4>
+          <h3 class="content__section-subheading title-decor">Гаджеты</h3>
           <p class="content__section-text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
             наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
@@ -127,13 +128,13 @@
         </article>
       </section>
       <section class="content__section content__section-fish">
-        <h3 class="content__section-heading">
+        <h2 class="content__section-heading">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
-        </h3>
-        <h4 class="content__section-subheading title-decor">
+        </h2>
+        <h3 class="content__section-subheading title-decor">
           5 простых (на самом деле не очень) советов
-        </h4>
+        </h3>
         <article class="content__section-article">
           <h4
             class="content__section-subheading content__section-subheading-thin title-decor"
@@ -172,7 +173,7 @@
           </h4>
           <p class="content__section-text">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            <a class="accent-text" href="#0">показал</a>, что созерцание природы
+            <a class="accent-text" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы
             повышает концентрацию, в то время как после просмотра городских
             пейзажей она наоборот понижается. Можно совместить прогулку с
             физическими упражнениями или бегом — так в мозг поступит ещё больше
@@ -208,10 +209,10 @@
         </article>
       </section>
       <section class="content__section content__section-pics">
-        <h4 class="content__section-subheading title-decor">
+        <h3 class="content__section-subheading title-decor">
           А можно в картинках?
-        </h4>
-        <section class="content__section-gallery">
+        </h3>
+        <div class="content__section-gallery">
           <img
             class="content__section-gallery-image img-sunset"
             src="./images/sunset.png"
@@ -242,10 +243,10 @@
             alt="улица"
             loading="lazy"
           />
-        </section>
+        </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated-zone">
       <span class="footer__text">focus</span>
     </footer>
   </body>
